LIMO-278: Fixed component size on mobile

--- a/src/components/livescore/ls-season-button/_ls-season-button.scss
+++ b/src/components/livescore/ls-season-button/_ls-season-button.scss
@@ -32,7 +32,15 @@
 	}
 
 	@media screen and (max-width: $layout-screen-size-threshold) {
-		background-position: center 11px;
+		.mdl-layout__header & {
+			line-height: 1;
+			background-position: center 11px;
+
+			select {
+				height: $layout-mobile-header-height;	
+				line-height: $layout-mobile-header-height + 1px;	
+			}
+		}
 	}
 }
 
